<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditAccount">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        tools:context=".RegisterFragment"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/last_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_number_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/old_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirm_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_update"
            android:backgroundTint="@color/button"
            android:layout_margin="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
