<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:background="@drawable/wallpaper"
        tools:context=".RegisterFragment"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logoRegisterPage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="@dimen/RegisterPage_bottom_margin"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/action_create_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/last_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_number_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirm_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:backgroundTint="@color/button"
            android:layout_margin="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
