<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
            android:orientation="vertical"
        android:background="@drawable/wallpaper"
        tools:context=".RegisterFragment"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logoRegisterPage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="@dimen/RegisterPage_bottom_margin"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_margin="10dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/shape_mail"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_margin="10dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button2"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/sign_in"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="316dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/text_edit"
            android:shadowColor="@android:color/transparent"
            android:text="@string/action_register"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="382dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>